#22 removing initial annotations and DI implementation for first version of V2