@@ -67,7 +67,6 @@
                     <argLine>
                         --illegal-access=permit
                         --add-opens com.pi4j.test/com.pi4j.test=com.pi4j,ALL-UNNAMED
-                        --add-opens com.pi4j.test/com.pi4j.test.annotations=com.pi4j,ALL-UNNAMED
                         --add-opens com.pi4j.test/com.pi4j.test.context=com.pi4j,ALL-UNNAMED
                         --add-opens com.pi4j.test/com.pi4j.test.io.i2c=com.pi4j,ALL-UNNAMED
                         --add-opens com.pi4j.test/com.pi4j.test.io.serial=com.pi4j,ALL-UNNAMED
